# Generated by Django 3.2.7 on 2021-11-14 14:18

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('user', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Dependent',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('first_name', models.CharField(max_length=50)),
                ('last_name', models.CharField(max_length=50)),
                ('gender', models.CharField(choices=[('MALE', 'Male'), ('FEMALE', 'Female'), ('OTHER', 'Other')], max_length=20)),
                ('dob', models.DateField(max_length=8)),
                ('image_url', models.CharField(blank=True, max_length=500, null=True)),
                ('blood_group', models.CharField(blank=True, max_length=20, null=True)),
                ('is_notify', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('parent_id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='dependent', to='user.parent')),
            ],
            options={
                'verbose_name': 'Dependent',
                'verbose_name_plural': 'Dependents',
                'db_table': 'dependent',
            },
        ),
    ]
