# Generated by Django 3.2.7 on 2021-11-14 14:17

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('route', '0001_initial'),
        ('category', '0001_initial'),
        ('vaccine_site', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Vaccine',
            fields=[
                ('id', models.BigAutoField(primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100)),
                ('vac_code', models.CharField(max_length=20)),
                ('description', models.CharField(max_length=200)),
                ('dosage_number', models.IntegerField()),
                ('dose', models.CharField(max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='vaccine', to='category.category')),
                ('route', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='vaccine', to='route.route')),
                ('vaccine_site', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='vaccine', to='vaccine_site.vaccinesite')),
            ],
            options={
                'verbose_name': 'Vaccine',
                'verbose_name_plural': 'Vaccines',
                'db_table': 'vaccine',
            },
        ),
    ]
